<package format="2">
    <name>hut_pid</name>
    <version>0.0.1</version>
    <description>hut_robot PID dynamic_reconfigure</description>
    <author>Juan Jimeno</author>
    <maintainer email="hut@gmail.com">HuT Labs</maintainer>
    <license>BSD</license>
    <url>https://github.com/grassjelly/lino_pid</url>

    <buildtool_depend>catkin</buildtool_depend>
    <build_depend>message_generation</build_depend>
    <exec_depend>message_runtime</exec_depend>

    <depend>dynamic_reconfigure</depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>std_msgs</depend>
    <depend>hut_msgs</depend>
</package>
